--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -9,13 +9,20 @@
     justify-content: center;
     border: 1px solid black;
 }
+.navbar a{
+    font-size: 1.5rem;
+}
+
+h1{
+    text-decoration: underline;
+}
 
 li {
     text-align: center;
 }
 
 body {
-    background: url('../img/computerbackground.png') no-repeat center center fixed;
+    background: darkgray url('../img/computerbackground.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -29,7 +36,7 @@ body {
 
 .jumbotron-cover-image {
     /* position: relative; */
-    background: #a40 url("../img/java3.jpg") center center;
+    background: blue url("../img/java3.jpg") center center;
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -39,14 +46,13 @@ body {
 }
 
 .item {
-    padding-top: 80px!important;
+    padding-top: 40px!important;
     margin-bottom: 80px!important;
-
 }
 
 .bottom-span{
-    position:absolute;
-    bottom:0;
+    position: absolute;
+    bottom: 8px;
     left: 0;
     width: 100%;
 }
@@ -59,8 +65,8 @@ body {
 
 #profilecards div {
     margin-top: 16px;
-    height: 280px;
-    padding-bottom: 8px;
+    height: 320px;
+    /*padding-bottom: 8px;*/
 }
 
 #contact {
